--- a/index.html
+++ b/index.html
@@ -594,18 +594,22 @@
 
 <div id="students">
 <h2>Students</h2>
-	<b>Postgraduate Students:</b>
+	<b>Current Students:</b>
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="" target="_blank">Fuying Wang</a></td></tr>
-		<tr><td> Weiqin Zhao</td></tr>
-		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (HKU-PS)</td></tr>
-	
+		<tr><td> <a href="" target="_blank">Fuying Wang</a> (PhD Student, 2021-)</td></tr>
+		<tr><td> Weiqin Zhao (Mphil-PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (PhD Student, 2021-)(HKU-PS)</td></tr>
+		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
+		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
+		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
+		<tr><td> Miao Yan (Master at McGill)</td></tr>
 	</tbody>
 	</table>
 	<br>
 	
+	<!-- 
 	<b>Research Assistants:</b>
 	<br>	
 	<table style="border-spacing:2px">
@@ -615,26 +619,28 @@
 	</table>
 	<br>
 	
-	
-	<!-- <b>Undergraduate & Master Students:</b>
+	<b>Undergraduate & Master Students:</b>
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
+		<tr><td> Miao Yan (Master at McGill)</td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
 		<tr><td> Yiqing Shen (BSc at SJTU)</td></tr>
 		<tr><td> Zeqi Xiao (BEng at ZJU)</td></tr>
-		<tr><td> Miao Yan (Master at McGill)</td></tr>
-		<tr><td> Yijun Yang (BEng at SDU)</td></tr>
+		<tr><td> Yijun Yang (BEng at SDU)</td></tr> 
+	-->
 	</tbody>
 	</table>
-	<br> -->
-	
+	<br> 
 	
 	<b>Previous Mentorship:</b>
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
+	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern)(BSc at SJTU)</td></tr>
+	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU)</td></tr>
+	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU)</td></tr> 
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
 	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>	
 	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
