--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
 	<table style="border-spacing:2px">
 	<tbody>
 		<tr><td> <a href="" target="_blank">Fuying Wang</a> (PhD Student, 2021-)</td></tr>
-		<tr><td> Weiqin Zhao (Mphil-PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (PhD Student, 2021-)(HKU-PS)</td></tr>
+		<tr><td> Weiqin Zhao (MPhil-PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
@@ -638,7 +638,7 @@
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern)(BSc at SJTU)</td></tr>
+	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU)</td></tr>
 	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU)</td></tr>
 	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU)</td></tr> 
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
