--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
 		Liyue Shen, <b>Lequan Yu</b>, Wei Zhao, John Pauly, Lei Xing. <br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
 	</li>
@@ -604,6 +604,7 @@
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
+		<tr><td> <a href="https://zhe-wang0018.github.io/" target="_blank">Zhe Wang</a> (BEng at PolyU)</td></tr>
 		<tr><td> Miao Yan (Master at McGill)</td></tr>
 	</tbody>
 	</table>
