--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[01/2022] One paper was accepted by MedIA.
+		[02/2022] Two papers were accepted by MedIA.
 	</li>
 	<li>
 		[01/2022] One paper was accepted by TMI.
@@ -189,6 +189,11 @@
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
 		Liyue Shen, <b>Lequan Yu</b>, Wei Zhao, John Pauly, Lei Xing. <br>
+		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Towards Reliable Cardiac Image Segmentation: Assessing Image-level and Pixel-level Segmentation Quality via Self-reflective References</a><br>
+		Kang Li, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
 	</li>
 	<li>
