--- a/index.html
+++ b/index.html
@@ -686,12 +686,18 @@
 <div id="service">
 <h2>Professional Activities</h2>
 <li>	
-	<b>Conference Reviews:</b>
+	<b>Program Committees:</b>
 	<br>
 	Area Chair of Medical Image Computing and Computer Assisted Intervention (MICCAI’22)<br>
+	Senior Program Committee of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
 	Co-organizer of ICCV'21 workshop on Computer Vision for Automated Medical Diagnosis<br>
-	Senior PC of AAAI Conference on Artificial Intelligence (AAAI’22)<br>
-	Senior PC of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	Senior Program Committee of International Joint Conference on Artificial Intelligence (IJCAI’21)<br>
+	<p style="margin-top:3px"></p>		
+</li>
+	
+<li>	
+	<b>Conference Reviews:</b>
+	<br>
 	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-22)<br>
 	PC of AAAI Conference on Artificial Intelligence (AAAI’20-21)<br>
 	IEEE International Conference on Computer Vision (ICCV’21, ICCV'19)<br>
