--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and medical image analysis. 
+	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
 	I am dedicated to designing machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
 	Specifically, we focus on: 
 	1) developing multi-modal learning algorithms to intergrate different biomedical data for disease prevention, diagnosis, and prognosis; 
