--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[03/2022] One paper was accepted by CVPR 2022.
+	</li>
+	<li>
 		[02/2022] Two papers were accepted by MedIA.
 	</li>
 	<li>
