--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">CD&sup2-pFed: Cyclic Distillation-guided Channel Decoupling for Model Personalization in Federated Learning</a><br>
+		Yiqing Shen, Yuyin Zhou, <b>Lequan Yu</b>. <br>
+		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2022.</br>
+	</li>
+	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
 		Liyue Shen, <b>Lequan Yu</b>, Wei Zhao, John Pauly, Lei Xing. <br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
