--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
-		<tr><td> <a href="https://zhe-wang0018.github.io/" target="_blank">Zhe Wang</a> (BEng at PolyU)</td></tr>
+		<tr><td> Zhe Wang (BEng at PolyU)</td></tr>
 		<tr><td> Miao Yan (Master at McGill)</td></tr>
 	</tbody>
 	</table>
