--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
+		<a href="https://aaai-2022.virtualchair.net/poster_aaai5691" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
 		Wentai Hou, <b>Lequan Yu</b>, Chengxuan Lin, Helong Huang, Rongshan Yu, Jing Qin, Liansheng Wang.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. </br>
 	</li>
@@ -205,7 +205,7 @@
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Towards Reliable Cardiac Image Segmentation: Assessing Image-level and Pixel-level Segmentation Quality via Self-reflective References</a><br>
+		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000779" target="_blank">Towards Reliable Cardiac Image Segmentation: Assessing Image-level and Pixel-level Segmentation Quality via Self-reflective References</a><br>
 		Kang Li, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
 		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2022.</br>
 	</li>
