--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 	<table style="border-spacing:2px">
 	<tbody>
 		<tr><td> <a href="" target="_blank">Fuying Wang</a> (PhD Student, 2021-)</td></tr>
-		<tr><td> Weiqin Zhao (MPhil-PhD Student, 2021-)</td></tr>
+		<tr><td> Weiqin Zhao (PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
