--- a/index.html
+++ b/index.html
@@ -615,10 +615,10 @@
 		<tr><td> Weiqin Zhao (PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
-		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
-		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
+		<tr><td> Zhuo Liang (BSc at HKU)(incoming PhD Student, HKU-PS)</td></tr>
+		<tr><td> Ruichen Luo (BEng at ZJU)(incoming PhD Student, HKU-PS)</td></tr>
+		<tr><td> Miao Yan (Master at McGill)(incoming PhD Student, HKU-PS)</td></tr>
 		<tr><td> Zhe Wang (BEng at PolyU)</td></tr>
-		<tr><td> Miao Yan (Master at McGill)</td></tr>
 	</tbody>
 	</table>
 	<br>
