--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <h2>Biography</h2>
 <p>
 	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
-	I am dedicated to designing machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
+	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
 	Specifically, we focus on: 
 	1) developing multi-modal learning algorithms to intergrate different biomedical data for disease prevention, diagnosis, and prognosis; 
 	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect medical data;
@@ -92,10 +92,12 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, EHR processing, and bioinformatics. 
+	I am looking for self-motivated PhD/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, clinical NLP, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
-	
+<p>
+	Due to the large amount of emails I receive, I may not be able to respond to each one individually.
+</p>
 <p>
 	If you are an HKU student interested in doing research with me, please send me an email.
 </p>
@@ -617,7 +619,7 @@
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Research Assistant) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(incoming PhD Student, HKU-PS)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)(incoming PhD Student, HKU-PS)</td></tr>
-		<tr><td> Miao Yan (Master at McGill)(incoming PhD Student, HKU-PS)</td></tr>
+		<tr><td> Miao Yan (Master at McGill)(incoming PhD Student, HKPF)</td></tr>
 		<tr><td> Zhe Wang (BEng at PolyU)</td></tr>
 	</tbody>
 	</table>
@@ -652,9 +654,9 @@
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU)</td></tr>
-	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU)</td></tr>
-	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU)</td></tr> 
+	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> PhD at JHU)</td></tr>
+	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> Intern at Shanghai AI Lab)</td></tr>
+	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
 	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>	
 	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
