--- a/index.html
+++ b/index.html
@@ -654,7 +654,8 @@
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> PhD at JHU)</td></tr>
+	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
+	<tr><td> Xiaoyu Zhang (2021 Summer Intern) (BEng at ZJU --> MCDS at CMU)</td></tr>
 	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> Intern at Shanghai AI Lab)</td></tr>
 	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
 	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
