--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 		[03/2022] One paper was accepted by CVPR 2022.
 	</li>
 	<li>
+		[03/2022] One paper was accepted by JBHI.
+	</li>
+	<li>
 		[02/2022] Two papers were accepted by MedIA.
 	</li>
 	<li>
