--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[04/2022] One paper was accepted by TMI.
+	</li>
+	<li>
 		[03/2022] One paper was accepted by CVPR 2022.
 	</li>
 	<li>
@@ -623,7 +626,6 @@
 		<tr><td> Zhuo Liang (BSc at HKU)(incoming PhD Student, HKU-PS)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)(incoming PhD Student, HKU-PS)</td></tr>
 		<tr><td> Miao Yan (Master at McGill)(incoming PhD Student, HKPF)</td></tr>
-		<tr><td> Zhe Wang (BEng at PolyU)</td></tr>
 	</tbody>
 	</table>
 	<br>
@@ -645,6 +647,7 @@
 		<tr><td> Miao Yan (Master at McGill)</td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
 		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
+		<tr><td> Zhe Wang (BEng at PolyU)</td></tr>
 		<tr><td> Yiqing Shen (BSc at SJTU)</td></tr>
 		<tr><td> Zeqi Xiao (BEng at ZJU)</td></tr>
 		<tr><td> Yijun Yang (BEng at SDU)</td></tr> 
