--- a/index.html
+++ b/index.html
@@ -198,9 +198,14 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">CD&sup2-pFed: Cyclic Distillation-guided Channel Decoupling for Model Personalization in Federated Learning</a><br>
+		<a href="https://arxiv.org/abs/2204.03880" target="_blank">CD&sup2-pFed: Cyclic Distillation-guided Channel Decoupling for Model Personalization in Federated Learning</a><br>
 		Yiqing Shen, Yuyin Zhou, <b>Lequan Yu</b>. <br>
 		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/document/9765508" target="_blank">Lymph Node Metastasis Prediction from Whole Slide Images with Transformer-guided Multi-instance Learning and Knowledge Transfer</a><br>
+		Zhihua Wang, <b>Lequan Yu</b>, Xin Ding, Xuehong Liao, Liansheng Wang.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 	<li>
 		<a href="https://aaai-2022.virtualchair.net/poster_aaai5691" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
