--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[04/2022] Named by Baidu on <a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>.
+	<li>
 		[04/2022] One paper was accepted by TMI.
 	</li>
 	<li>
