--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[04/2022] Named by Baidu on <a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>.
+		[04/2022] Named on <a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>.
 	<li>
 		[04/2022] One paper was accepted by TMI.
 	</li>
@@ -686,6 +686,7 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
+		<tr><td><a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>, 2022 </td></tr>
 		<tr><td>IEEE TMI Distinguished Reviewer Silver Level, 2021 </td></tr>
 		<tr><td> <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">CUHK Young Scholars Thesis Award 2019</a></td></tr>
 		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
