--- a/index.html
+++ b/index.html
@@ -212,7 +212,17 @@
 	<li>
 		<a href="https://aaai-2022.virtualchair.net/poster_aaai5691" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
 		Wentai Hou, <b>Lequan Yu</b>, Chengxuan Lin, Helong Huang, Rongshan Yu, Jing Qin, Liansheng Wang.<br>
-		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. </br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/abstract/document/9741294" target="_blank">All-Around Real Label Supervision: Cyclic Prototype Consistency Learning for Semi-supervised Medical Image Segmentation</a><br>
+		Zhe Xu, Yixin Wang, Donghuan Lu, <b>Lequan Yu</b>, Jiangpeng Yan, Jie Luo, Kai Ma, Yefeng Zheng, Raymond Kai-yu Tong. <br>
+		<em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/jbio.202200045" target="_blank">Single Pixel Imaging via Unsupervised Deep Compressive Sensing with Collaborative Sparsity in Discretized Feature Space</a><br>
+		Mengyu Jia, <b>Lequan Yu</b>, Wenxing Bai, Pengfei Zhang, Limin Zhang, Wei Wang, Feng Gao. <br>
+		<em>Journal of Biophotonics, 2022.</br>
 	</li>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
