--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	<li>
 		<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/jbio.202200045" target="_blank">Single Pixel Imaging via Unsupervised Deep Compressive Sensing with Collaborative Sparsity in Discretized Feature Space</a><br>
 		Mengyu Jia, <b>Lequan Yu</b>, Wenxing Bai, Pengfei Zhang, Limin Zhang, Wei Wang, Feng Gao. <br>
-		<em>Journal of Biophotonics, 2022.</br>
+		<em>Journal of Biophotonics</em>, 2022.</br>
 	</li>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
@@ -691,6 +691,34 @@
 <br>
 </div>
 	
+<div id="talk">
+<h2>Recent Talks &amp; Presentations</h2>
+<ul>
+	<li>
+		<b>Medical Image Analysis and Reconstruction with Data-efficient Learning</b> <br>
+		at Beihang University, May 2022. <br>
+		at Zhejiang University, May 2022. <br>
+		at 2021海峡两岸暨港澳精准医学青年博士论坛, November 2021. <br>
+		at 中国医师协会第十五次放射医师年会, October 2021. <br>
+		at Nanjing University of Information Science and Technology, October 2021. <br>
+		at Department of Electrical and Electronic Engineering, HKU, September 2021. <br>
+		at MICS 2021, July 2021. <br>
+		at Data Science and Computational Statistics Seminar, University of Birmingham, February 2021. </br>
+	</li>
+	<li>
+		<b>AI for Medical Imaging: Applications and Beyond</b> <br>
+		at Mini-Symposium on Interdisciplinary Research, Faculty of Science, HKU, January 2022. <br>
+		at School of Biomedical Sciences, HKU, December 2021. </br>
+	</li>
+	<li>
+		<bThe Applications of Transformer in Volumetric Segmentation and Low Dose CT</b> <br>
+		at VALSE Webinar, October 2022. </br>
+	</li>	
+</ul>
+<br>
+</div>
+
+
 <div id="awards">
 <h2>Honors &amp; Awards</h2>
 <table style="border-spacing:2px">
