--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 		<b>Medical Image Analysis and Reconstruction with Data-efficient Learning</b> <br>
 		at Beihang University, May 2022. <br>
 		at Zhejiang University, May 2022. <br>
-		at 2021海峡两岸暨港澳精准医学青年博士论坛, November 2021. <br>
+		at 海峡两岸暨港澳精准医学青年博士论坛, November 2021. <br>
 		at 中国医师协会第十五次放射医师年会, October 2021. <br>
 		at Nanjing University of Information Science and Technology, October 2021. <br>
 		at Department of Electrical and Electronic Engineering, HKU, September 2021. <br>
@@ -711,7 +711,7 @@
 		at School of Biomedical Sciences, HKU, December 2021. </br>
 	</li>
 	<li>
-		<bThe Applications of Transformer in Volumetric Segmentation and Low Dose CT</b> <br>
+		<b>The Applications of Transformer in Volumetric Segmentation and Low Dose CT</b> <br>
 		at VALSE Webinar, October 2022. </br>
 	</li>	
 </ul>
