--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in artificial intelligence for healthcare, machine learning, computer vision, clinical NLP, and bioinformatics. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in machine learning, computer vision (medical image analysis), clinical NLP, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 <p>
