--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[06/2022] Four papers were accepted by MICCAI 2022.
+	</li>
+	<li>
 		[04/2022] Named on <a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>.
+	</li>
 	<li>
 		[04/2022] One paper was accepted by TMI.
 	</li>
