--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in machine learning, computer vision (medical image analysis), clinical NLP, and bioinformatics. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in machine learning, computer vision, clinical NLP, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 <p>
@@ -118,9 +118,6 @@
 	</li>
 	<li>
 		[03/2022] One paper was accepted by CVPR 2022.
-	</li>
-	<li>
-		[03/2022] One paper was accepted by JBHI.
 	</li>
 	<li>
 		[02/2022] Two papers were accepted by MedIA.
@@ -209,14 +206,14 @@
 		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="https://ieeexplore.ieee.org/document/9765508" target="_blank">Lymph Node Metastasis Prediction from Whole Slide Images with Transformer-guided Multi-instance Learning and Knowledge Transfer</a><br>
-		Zhihua Wang, <b>Lequan Yu</b>, Xin Ding, Xuehong Liao, Liansheng Wang.<br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
-	</li>
-	<li>
 		<a href="https://aaai-2022.virtualchair.net/poster_aaai5691" target="_blank">H&sup2-MIL: Exploring Hierarchical Representation with Heterogeneous Multiple Instance Learning for Whole Slide Image Analysis</a><br>
 		Wentai Hou, <b>Lequan Yu</b>, Chengxuan Lin, Helong Huang, Rongshan Yu, Jing Qin, Liansheng Wang.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/document/9765508" target="_blank">Lymph Node Metastasis Prediction from Whole Slide Images with Transformer-guided Multi-instance Learning and Knowledge Transfer</a><br>
+		Zhihua Wang, <b>Lequan Yu</b>, Xin Ding, Xuehong Liao, Liansheng Wang.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9741294" target="_blank">All-Around Real Label Supervision: Cyclic Prototype Consistency Learning for Semi-supervised Medical Image Segmentation</a><br>
