--- a/index.html
+++ b/index.html
@@ -201,6 +201,26 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">NestedFormer: Nested Modality-Aware Transformer for Brain Tumor Segmentation</a><br>
+		Zhaohu Xing, <b>Lequan Yu</b>, Liang Wan, Tong Han, and Lei Zhu.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Joint Prediction of Meningioma Grade and Brain Invasion via Task-Aware Contrastive Learnin</a><br>
+		Tianling Liu, Wennan Liu, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Spatial-hierarchical Graph Neural Network with Dynamic Structure Learning for Histological Image Classification</a><br>
+		Wentai Hou, Helong Huang, Qiong Peng, Rongshan Yu, <b>Lequan Yu</b>, Liansheng Wang.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Reinforcement Learning Driven Intra-modal and Inter-modal Representation Learning for 3D Medical Image Classification</a><br>
+		Zhonghang Zhu, Liansheng Wang, Baptiste Magnier, Lei Zhu, Defu Zhang, <b>Lequan Yu</b>.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/2204.03880" target="_blank">CD&sup2-pFed: Cyclic Distillation-guided Channel Decoupling for Model Personalization in Federated Learning</a><br>
 		Yiqing Shen, Yuyin Zhou, <b>Lequan Yu</b>. <br>
 		<em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2022.</br>
