--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Joint Prediction of Meningioma Grade and Brain Invasion via Task-Aware Contrastive Learnin</a><br>
+		<a href="" target="_blank">Joint Prediction of Meningioma Grade and Brain Invasion via Task-Aware Contrastive Learning</a><br>
 		Tianling Liu, Wennan Liu, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
