--- a/index.html
+++ b/index.html
@@ -201,8 +201,13 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">You Should Look at All Objects</a><br>
+		Zhenchao Jin, Dongdong Yu, Luchuan Song, Zehuan Yuan, <b>Lequan Yu</b>.<br>
+		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2022.</br>
+	</li>
+	<li>
 		<a href="" target="_blank">NestedFormer: Nested Modality-Aware Transformer for Brain Tumor Segmentation</a><br>
-		Zhaohu Xing, <b>Lequan Yu</b>, Liang Wan, Tong Han, and Lei Zhu.<br>
+		Zhaohu Xing, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
 	<li>
@@ -236,6 +241,7 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 	
+<!--
 	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9741294" target="_blank">All-Around Real Label Supervision: Cyclic Prototype Consistency Learning for Semi-supervised Medical Image Segmentation</a><br>
 		Zhe Xu, Yixin Wang, Donghuan Lu, <b>Lequan Yu</b>, Jiangpeng Yan, Jie Luo, Kai Ma, Yefeng Zheng, Raymond Kai-yu Tong. <br>
@@ -246,6 +252,7 @@
 		Mengyu Jia, <b>Lequan Yu</b>, Wenxing Bai, Pengfei Zhang, Limin Zhang, Wei Wang, Feng Gao. <br>
 		<em>Journal of Biophotonics</em>, 2022.</br>
 	</li>
+-->
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841522000251" target="_blank">Novel-view X-ray Projection Synthesis through Geometry-integrated Deep Learning</a><br>
 		Liyue Shen, <b>Lequan Yu</b>, Wei Zhao, John Pauly, Lei Xing. <br>
