--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
 	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
 	Specifically, we focus on: 
-	1) developing multi-modal learning algorithms to intergrate heterogeneous biomedical data for disease prevention, diagnosis, and prognosis; 
+	1) developing multi-modal learning algorithms to intergrate multi-scale heterogeneous biomedical data for disease prevention, diagnosis, and prognosis; 
 	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect medical data;
 	and 3) developing causality-based learning algorithms to improve its interpretability for healthcare problems.
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
