--- a/index.html
+++ b/index.html
@@ -725,6 +725,7 @@
 <ul>
 	<li>
 		<b>Medical Image Analysis and Reconstruction with Data-efficient Learning</b> <br>
+		at VALSE 2022 workshop "医学数据分析中的深度学习方法", August 2022. <br>
 		at Beihang University, May 2022. <br>
 		at Zhejiang University, May 2022. <br>
 		at 海峡两岸暨港澳精准医学青年博士论坛, November 2021. <br>
@@ -736,6 +737,7 @@
 	</li>
 	<li>
 		<b>AI for Medical Imaging: Applications and Beyond</b> <br>
+		at AI and Big Data Research for Health Improvement Symposium, Institute of Data Science, HKU, August 2022. <br>
 		at Mini-Symposium on Interdisciplinary Research, Faculty of Science, HKU, January 2022. <br>
 		at School of Biomedical Sciences, HKU, December 2021. </br>
 	</li>
