--- a/index.html
+++ b/index.html
@@ -668,9 +668,9 @@
 		<tr><td> <a href="" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
 		<tr><td> Weiqin Zhao (BEng at Beihang)(PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
-		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (Mphil at USTC)(PhD Student, 2022-) </td></tr>
+		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
-		<tr><td> Miao Yan (Mphil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
+		<tr><td> Miao Yan (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
 	</tbody>
 	</table>
 	<br>
