--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[09/2022] One paper was accepted by TPAMI.
+	</li>
+	<li>
 		[06/2022] Four papers were accepted by MICCAI 2022.
 	</li>
 	<li>
@@ -201,17 +204,22 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">You Should Look at All Objects</a><br>
+		<a href="" target="_blank">MCIBI++: Soft Mining Contextual Information Beyond Image for Semantic Segmentation</a><br>
+		Zhenchao Jin, Dongdong Yu, Zehuan Yuan, <b>Lequan Yu</b>.<br>
+		<em>Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://arxiv.org/abs/2207.07889" target="_blank">You Should Look at All Objects</a><br>
 		Zhenchao Jin, Dongdong Yu, Luchuan Song, Zehuan Yuan, <b>Lequan Yu</b>.<br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">NestedFormer: Nested Modality-Aware Transformer for Brain Tumor Segmentation</a><br>
+		<a href="https://arxiv.org/abs/2208.14876" target="_blank">NestedFormer: Nested Modality-Aware Transformer for Brain Tumor Segmentation</a><br>
 		Zhaohu Xing, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Joint Prediction of Meningioma Grade and Brain Invasion via Task-Aware Contrastive Learning</a><br>
+		<a href="https://arxiv.org/abs/2209.01517" target="_blank">Joint Prediction of Meningioma Grade and Brain Invasion via Task-Aware Contrastive Learning</a><br>
 		Tianling Liu, Wennan Liu, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
