--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 	<li>
 		<a href="" target="_blank">MCIBI++: Soft Mining Contextual Information Beyond Image for Semantic Segmentation</a><br>
 		Zhenchao Jin, Dongdong Yu, Zehuan Yuan, <b>Lequan Yu</b>.<br>
-		<em>Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
+		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
 	</li>
 	<li>
 		<a href="https://arxiv.org/abs/2207.07889" target="_blank">You Should Look at All Objects</a><br>
