--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <h2>Biography</h2>
 <p>
 	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
-	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images. 
+	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images, to enable reliable clinical decision making.  
 	Specifically, we focus on: 
 	1) developing multi-modal learning algorithms to intergrate multi-scale heterogeneous biomedical data for disease prevention, diagnosis, and prognosis; 
 	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect medical data;
