--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">Multi-Granularity Cross-modal Alignment for Generalized Medical Visual Representation Learning</a><br>
+		Fuying Wang, Yuyin Zhou, Shujun Wang, Varut Vardhanabhuti, <b>Lequan Yu</b>.<br>
+		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2022.</br>
+	</li>
+	<li>
 		<a href="" target="_blank">MCIBI++: Soft Mining Contextual Information Beyond Image for Semantic Segmentation</a><br>
 		Zhenchao Jin, Dongdong Yu, Zehuan Yuan, <b>Lequan Yu</b>.<br>
 		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
